# lur

./: .readthedocs.yaml  README.md  README.rst  notes  opencv_build.sh
controller/: .gitignore  CMakeLists.txt  compile_commands.json
controller/include/: camera.h  log.h  serial.h  teensy_console.h
controller/scripts/: build.sh  setup.sh
controller/src/: camera.cpp  log.cpp  main.cpp  serial.cpp  teensy_console.cpp
docs/: README.rst  computer_vision.rst  conf.py  getting_started.rst  index.rst  pyproject.toml  simulation.rst  sonar.rst
docs/docs/source/: computer_vision.rst  getting_started.rst  index.rst
imu_test.ino/: sketch_oct23a.ino
scripts/: opencv_build.sh  opencv_jetson_build.sh  opencv_simple_install.sh
serial_stuff/: main.cpp  robosub
serial_stuff/serial/: serial.ino
teensy/: build.sh  connect.cpp  thruster_control.ino
teensy/lur/: lur.cpp  lur.h  messages.h
